--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body{
     font-family: 'Roboto', sans-serif;
+    
+}
+
+h1, h2, p{
+    text-align: center
+        
+}
+
+img{
+    position:relative;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%) }
 }
